--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>
         <section class="section-hero"></section>
         <section class="section-about-me"></section>
+        <h1 class="AboutMe"> About me</h1>
         <section class="section-services"></section>
         <section class="section-cta"></section>
         <section class="section-recent-works"></section>
