--- a/index.html
+++ b/index.html
@@ -8,9 +8,48 @@
     <title>Wireframe 04</title>
 </head>
 <body>
-    <header class="header"></header>
+    <header class="header">
+        <div class="logo-container">
+            <img src="./assets/images/logo.png" alt="wireframe 04 logo">
+        </div>
+        <nav class="nav-wrapper">
+            <ul class="menu-wrapper">
+                <li class="menu-links">
+                    <a href="#">Home</a>
+                </li>
+                <li class="menu-links">
+                    <a href="#">About</a>
+                </li>
+                <li class="menu-links">
+                    <a href="#">Services</a>
+                </li>
+                <li class="menu-links">
+                    <a href="#">Portfolio</a>
+                </li>
+                <li class="menu-links">
+                    <a href="#">Blog</a>
+                </li>
+                <li class="menu-links line-decoration">
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
-        <section class="section-hero"></section>
+        <section class="section-hero">
+            <div class="hero-details">
+                <h1 class="hero-heading">
+                    Hello I'm <span class="heading-style">Mark Parker</span>
+                </h1>
+                <p class="hero-description margin-top-s">
+                    A Freelance UI Designer & Web Developer
+                </p>
+                <a href="#" class="btn margin-top-m">View My Work</a>
+            </div>
+            <div class="hero-image-wrapper">
+                <img src="./assets/images/banner/hero.png" alt="mon with crossed arms looking confident" class="hero-image">
+            </div>
+        </section>
         <section class="section-about-me">
             <h1 class="AboutMe"> About me</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nihil voluptatum eaque, iusto quia atque numquam minima nostrum quasi eos hic alias cum earum quidem voluptas, dolorem voluptate! Inventore, dolore?</p>
