Added image to hero section plus pisitioned the decoration shapes

--- a/index.html
+++ b/index.html
@@ -41,18 +41,30 @@
     </header>
     <main>
         <section class="section-hero">
-            <div class="hero-details">
-                <h1 class="hero-heading">
-                    Hello I'm <span class="heading-style">Mark Parker</span>
-                </h1>
-                <p class="hero-description margin-top-s">
-                    A Freelance UI Designer & Web Developer
-                </p>
-                <a href="#" class="btn margin-top-m">View My Work</a>
+            <div class="section-hero-container">
+                <div class="hero-details">
+                    <h1 class="hero-heading">
+                        Hello, I'm <span class="heading-style margin-top-s">Mark Parker</span>
+                    </h1>
+                    <p class="hero-description margin-top-s">
+                        A Freelance UI Designer & Web Developer
+                    </p>
+                    <a href="#" class="btn margin-top-m">View My Work</a>
+                </div>
+                <div class="hero-image-wrapper">
+                    <img src="./assets/images/banner/man pointing left.png" alt="mon with crossed arms looking confident" class="hero-image">
+                </div>
             </div>
-            <div class="hero-image-wrapper">
-                <img src="./assets/images/banner/hero.png" alt="mon with crossed arms looking confident" class="hero-image">
-            </div>
+            <img src="./assets/images/banner/shape/shape-1.png" alt="a shape decoration for the section" class="shape1">
+            <img src="./assets/images/banner/shape/shape-1.png" alt="a shape decoration for the section" class="shape1b">
+            <img src="./assets/images/banner/shape/shape-2.png" alt="a shape decoration for the section" class="shape2">
+            <img src="./assets/images/banner/shape/shape-2.png" alt="a shape decoration for the section" class="shape2b">
+            <img src="./assets/images/banner/shape/shape-3.png" alt="a shape decoration for the section" class="shape3">
+            <img src="./assets/images/banner/shape/shape-3.png" alt="a shape decoration for the section" class="shape3b">
+            <img src="./assets/images/banner/shape/shape-3.png" alt="a shape decoration for the section" class="shape3c">
+            <img src="./assets/images/banner/shape/shape-4.png" alt="a shape decoration for the section" class="shape4">
+            <img src="./assets/images/banner/shape/shape-5.png" alt="a shape decoration for the section" class="shape5">
+            <img src="./assets/images/banner/shape/shape-6.png" alt="a shape decoration for the section" class="shape6">
         </section>
         <section class="section-about-me">
             <h1 class="AboutMe"> <b>About me</b></h1>
