added design in develop

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="menu-links">
                     <a href="#">Blog</a>
                 </li>
-                <li class="menu-links line-decoration">
+                <li class="menu-links line-menu-decoration">
                     <a href="#">Contact</a>
                 </li>
             </ul>
@@ -65,6 +65,13 @@
             <img src="./assets/images/banner/shape/shape-4.png" alt="a shape decoration for the section" class="shape4">
             <img src="./assets/images/banner/shape/shape-5.png" alt="a shape decoration for the section" class="shape5">
             <img src="./assets/images/banner/shape/shape-6.png" alt="a shape decoration for the section" class="shape6">
+            <div class="line-decoration"></div>
+            <div class="social-icons-wrapper">
+                <a href="#" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fa-brands fa-behance"></i></a>
+                <a href="#" class="social-icon"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
         </section>
         <section class="section-about-me">
             <h1 class="AboutMe"> <b>About me</b></h1>
