--- a/index.html
+++ b/index.html
@@ -11,44 +11,46 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <title>Wireframe 04</title>
+    <title>Egide & Pranavi - Wireframe 04</title>
 </head>
 <body>
     <header class="header">
-        <div class="logo-container">
-            <img src="./assets/images/logo.png" alt="wireframe 04 logo">
+        <div class="header-container">
+            <div class="logo-container">
+                <img src="./assets/images/logo.png" alt="wireframe 04 logo">
+            </div>
+            <nav class="nav-wrapper">
+                <ul class="menu-wrapper">
+                    <li class="menu-links">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="menu-links">
+                        <a href="#">About</a>
+                    </li>
+                    <li class="menu-links">
+                        <a href="#">Services</a>
+                    </li>
+                    <li class="menu-links">
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li class="menu-links">
+                        <a href="#">Blog</a>
+                    </li>
+                    <li class="menu-links line-menu-decoration">
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="nav-wrapper">
-            <ul class="menu-wrapper">
-                <li class="menu-links">
-                    <a href="#">Home</a>
-                </li>
-                <li class="menu-links">
-                    <a href="#">About</a>
-                </li>
-                <li class="menu-links">
-                    <a href="#">Services</a>
-                </li>
-                <li class="menu-links">
-                    <a href="#">Portfolio</a>
-                </li>
-                <li class="menu-links">
-                    <a href="#">Blog</a>
-                </li>
-                <li class="menu-links line-menu-decoration">
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
     </header>
     <main>
         <section class="section-hero">
             <div class="section-hero-container">
                 <div class="hero-details">
                     <h1 class="hero-heading">
-                        Hello, I'm <span class="heading-style margin-top-s">Mark Parker</span>
+                        Hello, I'm <span class="heading-style">Mark Parker</span>
                     </h1>
-                    <p class="hero-description margin-top-s">
+                    <p class="hero-description">
                         A Freelance UI Designer & Web Developer
                     </p>
                     <a href="#" class="btn margin-top-m">View My Work</a>
@@ -69,10 +71,18 @@
             <img src="./assets/images/banner/shape/shape-6.png" alt="a shape decoration for the section" class="shape6">
             <div class="line-decoration"></div>
             <div class="social-icons-wrapper">
-                <a href="#" class="social-icon"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#" class="social-icon"><i class="fa-brands fa-behance"></i></a>
-                <a href="#" class="social-icon"><i class="fa-brands fa-linkedin"></i></a>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
             </div>
         </section>
         <section class="section-about-me">
@@ -141,11 +151,36 @@
             </div>
            
         </section>
-        <section class="section-cta"></section>
-        <section class="section-recent-works"></section>
-        <section class="section-pricing"></section>
+        <section class="section-cta">
+            <div class="cta-container">
+                <h3 class="cta-heading">Have any project on mind?</h3>
+                <p class="cta-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, aperiam sequi consequuntur atque fuga sint!</p>
+                <div class="cta-button-wrapper">
+                    <a href="#" class="btn btn-secondary">Download cv</a>
+                    <a href="#" class="btn btn-outline">Hire Me</a>
+                </div>
+            </div>
+        </section>
+        <section class="section-recent-works">
+            <div class="works-container">
+                <div class="works-intro">
+                    <h2 class="works-heading">My Recent Works</h2>
+                    <p class="works-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eum veniam veritatis, consequuntur numquam fugiat.</p>
+                </div>
+                <div class="works-gallery">
+                    <img src="./assets/images/work/w-1.jpg" alt="a robot lying Down" class="works-image">
+                    <img src="./assets/images/work/w-2.jpg" alt="a robot lying Down" class="works-image">
+                    <img src="./assets/images/work/w-3.jpg" alt="a robot lying Down" class="works-image">
+                    <img src="./assets/images/work/w-4.jpg" alt="a robot lying Down" class="works-image">
+                    <img src="./assets/images/work/w-5.jpg" alt="a robot lying Down" class="works-image">
+                    <img src="./assets/images/work/w-6.jpg" alt="a robot lying Down" class="works-image">
+                </div>
+                <a href="#" class="btn btn-works">More Works</a>
+            </div>
+        <section>
+        <section class="section-pricing"><section>
         <section class="section-blog"></section>
-        <section class="section-contact"></section>
+        <section class="section-contact"><section>
     </main>
     <footer class="footer"></footer>
 </body>
